# glarki

./: CMakeLists.txt  README.md  run.bat
Doc/: TODO
include/glarki/: define.h
src/: lib.c  lib.h  main.c
src/Types/: AKColor.c  AKColor.h  export.c  export.h
